# polypody

./: Cargo.toml  LICENSE  LICENSE_3RD_PARTY  README.md  rustfmt.toml
.github/workflows/: main.yml
doc/: USER_GUIDE.md
src/: main.rs
src/app/: config.rs  mod.rs  playlist.rs
src/app/view/: controls.rs  library.rs  mod.rs  playlist.rs  queue.rs  sidebar.rs  start_screen.rs  style.rs  tracks.rs
src/internal/: library.rs  mod.rs  playlist.rs  scan.rs
src/internal/audio/: flac.rs  mod.rs  mp3.rs  output.rs  pcm.rs  vorbis.rs  wav.rs
src/view/: library.rs  mod.rs  style.rs
