[package]
name = "music_player"
version = "0.1.0"
edition = "2024"

[dependencies]
ape = "0.6.0"
bincode = { version = "2.0.1", features = [ "serde" ] }
claxon = "0.4.3"
hound = "3.5.1"
id3 = "1.16.3"
lewton = "0.10.2"
mp3-duration = "0.1.10"
rand = "0.9.1"
rfd = { version = "0.15.3", default-features = false, features = [ "tokio", "xdg-portal" ] }
ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"

[dependencies.iced]
version = "0.13.1"
features = [ "advanced", "image", "tokio" ]

[dependencies.iced_aw]
version = "0.12.2"
default-features = false
features = [ "context_menu" ]

[dependencies.rodio]
version = "0.20.1"
default-features = false

[dependencies.symphonia]
version = "0.5.4"
default-features = false
features = [ "adpcm", "flac", "mp3", "ogg", "pcm", "vorbis", "wav" ]

[dependencies.tokio]
version = "1.45.1"
features = [ "full" ]

[dependencies.xxhash-rust]
version = "0.8.15"
features = [ "xxh3" ]

[dev-dependencies]
paste = "1.0.15"
